<resources>
    <string name="app_name">FuelLog</string>
    <string name="action_settings">Settings</string>
    <string name="hint_log">Miles</string>
    <string name="hint_log1">Gallons</string>
    <string name="hint_log2">Cost</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="empty_not_saved">Log not saved because it is empty.</string>
    <string name="clear_data">Delete all</string>
    <string name="delete_log_preamble">Deleting </string>
    <string name="clear_data_toast_text">Clear the data now!</string>
    <string name="no_log">No logCar</string>
    <string name="odometer_readings">Odometer Readings</string>
    <string name="unable_to_update">Unable to update the logCar</string>
    <string name="no_results">No Data</string>
    <string name="get_car">Get Car</string>
    <string name="car">Car</string>
    <string name="Output">TextView</string>
    <string name="get_data">Button</string>
    <string name="get_avgmpg">GetAvgMPG</string>
    <string name="get_emissions">EmissionScore</string>
    <string name="your_avgmpg">AvgMPG</string>
    <string name="your_emission">Emissions Score</string>
    <string name="data">ID</string>
    <string name="kmperlitre_operation_text">KMPerLitre</string>
    <string name="milespergallon_operation_text">MilesPerGallon</string>
    <string name="costpergallon_operation_text">CostPerGallon</string>
    <string name="costpermile_operation_text">CostPerMile</string>
    <string name="apikpl_operation_text">APIKPL</string>
    <string name="kmpergallon_operation_text">KMPerGallon</string>
    <string name="milesperlitre_operation_text">MilesPerLitre</string>
    <string name="costperlitre_operation_text">CostPerLitre</string>
    <string name="costperkm_operation_text">CostPerKM</string>
    <string name="KM_operation_text">KMs</string>
    <string name="litre_operation_text">Litres</string>
    <string name="computationError">Error, please ensure you have input all values and in correct format</string>
    <string name="result">Result</string>
</resources>
