<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBackground"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_log_odom"
        style="@style/text_view_style"
        android:hint="@string/hint_log"
        android:inputType="textAutoComplete" />
    <EditText
        android:id="@+id/edit_log_fuel"
        style="@style/text_view_style"
        android:hint="@string/hint_log1"
        android:inputType="textAutoComplete" />
    <EditText
        android:id="@+id/edit_log_price"
        style="@style/text_view_style"
        android:hint="@string/hint_log2"
        android:inputType="textAutoComplete" />



    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/button_save"
        android:onClick="saveData"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/operation_result_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/operation_costpermile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMile"
        android:text="@string/costpermile_operation_text" />

    <Button
        android:id="@+id/operation_costpergallon_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGallon"
        android:text="@string/costpergallon_operation_text" />
    <Button
        android:id="@+id/operation_milespergallon_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMilesPerGallon"
        android:text="@string/milespergallon_operation_text" />
    <Button
        android:id="@+id/operation_kmpergallon_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onKMPerLitre"
        android:text="@string/kmperlitre_operation_text" />

</LinearLayout>